<resources>
    <string name="app_name">Key Keeper</string>

    <string name="action_access">Access</string>
    <string name="action_import">Import sheet (xls)</string>
    <string name="action_export">Export sheet (xls)</string>

    <string name="log_in">Enter</string>
    <string name="new_registration">New registration</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="access_denied">Access Denied</string>
    <string name="no_registration_message">No registration has been found</string>
    <string name="hello_world">Hello world</string>
    <string name="empty_fields_warning">Fill all the fields</string>
    <string name="web_site">Web site</string>
    <string name="repeated_registration_warning">This combination of website and login already exists.</string>
    <string name="successfully_saved">Successfully saved</string>
    <string name="what_to_do">What do you want to do?</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="successfully_removed">Successfully removed</string>
    <string name="remove_registration">Remove registration</string>
    <string name="registration_remove_confirmation">Are you sure you want to remove this registration?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="registration_editing">Editing registration</string>
    <string name="ok">Ok</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="edit_password_access">Editing access password</string>
    <string name="insert_password_warning">Insert some password</string>
    <string name="access_password_successfully_defined">New access password successfully defined</string>
    <string name="incorrect_current_access_password">The current access password is incorrect</string>
    <string name="save_access_password_dialog_title">Access confirmation</string>
    <string name="save_access_password_dialog_message">Are you sure that you want to save the new access password?</string>
    <string name="access_control">Access Control</string>
    <string name="file_successfully_created">File has been successfully created</string>
    <string name="export_xls_file">Export sheet (xls)</string>
    <string name="select_a_file">Select a file</string>
    <string name="registration_import_finished">Registration importing completed</string>
    <string name="import_file_confirm_dialog">Are you sure that you want to import data from this file?</string>
</resources>
