<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    android:padding="6dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/new_registration"/>

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/text"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:hint="@string/login"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/edit_login"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/edit_password"
        android:text="@string/save"/>
</RelativeLayout>