<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    android:padding="6dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/what_to_do"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text"
        android:layout_marginTop="6dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/web_site"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/text_site"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hello_world"
            android:textSize="16sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/text_login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hello_world"
            android:textSize="16sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/text_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hello_world"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="55dp"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="55dp"
            android:text="@string/remove"/>
    </LinearLayout>

</RelativeLayout>