<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.samirsamir.passwordkeeper.activity.MainActivity">
    <item
        android:id="@+id/action_access"
        android:orderInCategory="100"
        android:title="@string/action_access"
        android:icon="@drawable/ic_lock_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        android:icon="@drawable/ic_attach_file_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        android:icon="@drawable/ic_insert_drive_file_black_24dp"
        app:showAsAction="never" />
</menu>
