<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    android:padding="6dp">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/web_site"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/text_site"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hello_world"
            android:textColor="#c0c0c0"
            android:textSize="16sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/text_login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hello_world"
            android:textColor="#c0c0c0"
            android:textSize="16sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/text_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hello_world"
            android:textColor="#c0c0c0"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:layout_marginTop="6dp"
        android:textSize="@dimen/dialog_button_text"
        android:text="@string/ok"/>

</RelativeLayout>